--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -28,5 +28,12 @@ spec:
               value: postgre-cluster-ip-service
             - name: PGPORT
               value: '5432'
+            - name: PGDATABASE
+              value: postgres
+            - name: PGPASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: pgpassword
+                  key: PGPASSWORD
 
     
