initialize ingress setting

--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -17,3 +17,8 @@ spec:
           image: stephengrider/multi-worker
           ports: 
             - containerPort: 4000
+          env:
+            - name: REDIS_HOST
+              value: redis-cluster-ip-service
+            - name: REDIS_PORT
+              value: '6379'
